[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dongtian"
version = "0.1.0"
description = "Grotto-heaven for AI conversations. Structured memory in a single SQLite file."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["memory", "ai", "conversations", "sqlite", "mcp", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/siaochuan/dongtian"

[project.scripts]
dongtian = "dongtian.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dongtian*"]
